FIX article image size and alignment on smartphone screen size
Some article images were slightly wider than the others and were aligned slightly more to the left. Fixed by adding width 100% to parent element, then adding max-width to images.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -359,6 +359,7 @@ body {
     margin-right: 10px;
   }
   .news-article-link {
+    width: 100%;
     display: flex;
     text-decoration: none;
     color: #000;
@@ -370,8 +371,10 @@ body {
   }
   .news-article-link img {
     min-width: 8em;
+    max-width: 8em;
     object-fit: cover;
     max-height: 5em;
+    margin-left: auto;
   }
 
   .tasks-section {
